# IU7-AA

./: .gitignore
lab_01/: iu7-algan-cicd-student.mk  main.ipynb
lab_01/docs/: report.tex
lab_01/docs/img/: damerau_levenstein.drawio  levenstein_iter.drawio  levenstein_rec.drawio  table_fill.drawio
lab_01/docs/parts/: analytic.tex  conclusion.tex  constructor.tex  intro.tex  materials.tex  research.tex  tech.tex  title.tex
lab_01/src/: damerau_levenstein.py  fill_table.py  levenstein_iter.py  levenstein_rec.py  micropy_out.txt  micropy_test.py
lab_02/: .gitignore  main.ipynb
lab_02/report/: profiling.csv  report.tex
lab_02/report/img/: classic.drawio  wino.drawio
lab_02/src/: simple.py  test.py  winograd.py
lab_03/: iu7-algan-cicd-student.mk  main.ipynb
lab_03/src/: binary.py  simple.py  stud-unit-test-report-prev.json  test.py
lab_04/: .gitignore
lab_04/report/: report.tex
lab_04/report/parts/: dev.tex  (+8 more)
lab_04/src/: CMakeLists.txt  curlwrap.cpp  curlwrap.hpp  main.cpp  threadpool.cpp  threadpool.hpp
lab_05/: iu7-algan-cicd-student.mk
lab_05/report/: report.bbl  report.blg  report.tex
lab_05/src/: CMakeLists.txt  main.cpp
lab_05/src/impl/: DBManager.cpp  Logger.cpp  Parser.cpp  TaskManager.cpp
lab_05/src/inc/: DBManager.hpp  Logger.hpp  Parser.hpp  Reader.hpp  Task.hpp  TaskManager.hpp
lab_06/: .gitignore  iu7-algan-cicd-student.mk
lab_06/report/: appendix.tex  report.tex
lab_06/src/: CMakeLists.txt  main.cpp  stud-unit-test-report-prev.json
lab_07/: .gitignore
lab_07/report/: report.tex
lab_07/src/: CMakeLists.txt  main.cpp
(+52 files in other folders)
